--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,8 @@
     </target>
     <target name="schreiber" depends="compile">
         <copy file="WALKTHROUGH.txt" todir="${build}" />
+        <copy file="README.txt" todir="${build}" />
+        <copy file="COMMAND_LIST.txt" todir="${build}" />
         <jar jarfile="6TonyAndColinProject14.jar" basedir="${build}" manifest="MANIFEST.MF" />
     </target>
 </project>
